--- a/src/blocks/profile/__button-avatar/profile__button-avatar.css
+++ b/src/blocks/profile/__button-avatar/profile__button-avatar.css
@@ -3,6 +3,8 @@
   border: 0;
   border-radius: 50%;
   padding: 0;
+  width: 120px;
+  height: 120px;
   overflow: hidden;
   position: relative;
 }
@@ -24,4 +26,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 26px;
+}
+
+@media (max-width: 502px) {
+  .profile__button-avatar {
+    margin-bottom: 26px;
+  }
 }
