--- a/src/blocks/profile/__photo/profile__photo.css
+++ b/src/blocks/profile/__photo/profile__photo.css
@@ -6,8 +6,8 @@
   object-position: center;
 }
 
-@media (max-width: 502px) {
+/* @media (max-width: 502px) {
   .profile__photo {
     margin-bottom: 26px;
   }
-}
+} */
